force-app/main/default/objects/Change__c/Change__c.object-meta.xml
<CustomObject>
    <label>入替</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>入替名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>