force-app/main/default/objects/Change__c/fields/AdministrativeCharge__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeCharge__c</fullName>
    <label>（不要）事務手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>