force-app/main/default/objects/Change__c/fields/ApplicationArriveConsentAmount__c.field-meta.xml
<CustomField>
    <fullName>ApplicationArriveConsentAmount__c</fullName>
    <label>個人負担承諾金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>