force-app/main/default/objects/Change__c/fields/ArchiveStorageDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveStorageDate__c</fullName>
    <label>書庫保管日</label>
    <type>Date</type>
</CustomField>