force-app/main/default/objects/Change__c/fields/ArrangeManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>ArrangeManagementCharge__c</fullName>
    <label>清掃・修繕業務手配管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>