force-app/main/default/objects/Change__c/fields/AtLeaveProcessMemo__c.field-meta.xml
<CustomField>
    <fullName>AtLeaveProcessMemo__c</fullName>
    <label>退去時処理メモ</label>
    <type>TextArea</type>
</CustomField>