force-app/main/default/objects/Change__c/fields/BillAcquirer__c.field-meta.xml
<CustomField>
    <fullName>BillAcquirer__c</fullName>
    <label>請求書取得者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>