force-app/main/default/objects/Change__c/fields/BillAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>BillAcquisitionDate__c</fullName>
    <label>請求書受領日</label>
    <type>Date</type>
</CustomField>