force-app/main/default/objects/Change__c/fields/BillIssueRequestDate__c.field-meta.xml
<CustomField>
    <fullName>BillIssueRequestDate__c</fullName>
    <label>請求書発行依頼日</label>
    <type>Date</type>
</CustomField>