force-app/main/default/objects/Change__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>入替</relationshipLabel>
    <relationshipName>FLOM</relationshipName>
    <type>Lookup</type>
</CustomField>