force-app/main/default/objects/Change__c/fields/ChangeChargesCheck__c.field-meta.xml
<CustomField>
    <fullName>ChangeChargesCheck__c</fullName>
    <formula>If( ISBLANK(  RelatedChange__c  ) , if(  RelatedChange__r.SNTArriveChangeCharges__c  +  SNTArriveChangeCharges__c  ==  Account__r.ServiceContractChange__r.ChangeCharges__c  , &quot;OK&quot; , &quot;NG&quot; ) , If(  SNTArriveChangeCharges__c  ==  Account__r.ServiceContractChange__r.ChangeCharges__c  , &quot;OK&quot; , &quot;NG&quot; )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入替手数料チェック</label>
    <type>Text</type>
</CustomField>