force-app/main/default/objects/Change__c/fields/ChangeCost__c.field-meta.xml
<CustomField>
    <fullName>ChangeCost__c</fullName>
    <label>入替費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>