force-app/main/default/objects/Change__c/fields/ChangeCounterEmail__c.field-meta.xml
<CustomField>
    <fullName>ChangeCounterEmail__c</fullName>
    <label>入替窓口メール</label>
    <type>Email</type>
</CustomField>