force-app/main/default/objects/Change__c/fields/ChangeCounterPhone__c.field-meta.xml
<CustomField>
    <fullName>ChangeCounterPhone__c</fullName>
    <label>入替窓口電話番号</label>
    <type>Phone</type>
</CustomField>