force-app/main/default/objects/Change__c/fields/ChangeNoticeSendDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeNoticeSendDate__c</fullName>
    <label>変更通知送付日</label>
    <type>Date</type>
</CustomField>