force-app/main/default/objects/Change__c/fields/CheckListCollector__c.field-meta.xml
<CustomField>
    <fullName>CheckListCollector__c</fullName>
    <label>（不要）チェックリスト回収者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>