force-app/main/default/objects/Change__c/fields/CheckListUrl__c.field-meta.xml
<CustomField>
    <fullName>CheckListUrl__c</fullName>
    <label>（不要）チェックリストURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>