force-app/main/default/objects/Change__c/fields/CleaningArrangementCharges__c.field-meta.xml
<CustomField>
    <fullName>CleaningArrangementCharges__c</fullName>
    <label>清掃手配手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>