force-app/main/default/objects/Change__c/fields/CleaningArrangementFeeCheckResult__c.field-meta.xml
<CustomField>
    <fullName>CleaningArrangementFeeCheckResult__c</fullName>
    <label>清掃手配費チェック結果</label>
    <length>255</length>
    <type>Text</type>
</CustomField>