force-app/main/default/objects/Change__c/fields/CleanRepairCostTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>CleanRepairCostTaxCategory__c</fullName>
    <label>清掃・修繕費用税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>