force-app/main/default/objects/Change__c/fields/ClosedReason__c.field-meta.xml
<CustomField>
    <fullName>ClosedReason__c</fullName>
    <label>完了理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>解約に切り替え</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>