force-app/main/default/objects/Change__c/fields/ConstructionCompletionScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ConstructionCompletionScheduledDate__c</fullName>
    <label>（不要）工事完了予定日</label>
    <type>Date</type>
</CustomField>