force-app/main/default/objects/Change__c/fields/ConstructionOrderDate__c.field-meta.xml
<CustomField>
    <fullName>ConstructionOrderDate__c</fullName>
    <label>工事発注日</label>
    <type>Date</type>
</CustomField>