force-app/main/default/objects/Change__c/fields/ConstructionOrderer__c.field-meta.xml
<CustomField>
    <fullName>ConstructionOrderer__c</fullName>
    <label>（不要）工事発注者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>