force-app/main/default/objects/Change__c/fields/ConstructionOrderRequestMemo__c.field-meta.xml
<CustomField>
    <fullName>ConstructionOrderRequestMemo__c</fullName>
    <label>（不要）工事発注依頼メモ</label>
    <type>TextArea</type>
</CustomField>