force-app/main/default/objects/Change__c/fields/ContractMoneyAccount2_del__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAccount2_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先2_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>ChangeBankAccountRelation45_del</relationshipName>
    <type>Lookup</type>
</CustomField>