force-app/main/default/objects/Change__c/fields/ContractMoneyAccount3_del__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAccount3_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先3_口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>入替 (送金先3_口座)</relationshipLabel>
    <relationshipName>ChangeBankAccountRelation46_del</relationshipName>
    <type>Lookup</type>
</CustomField>