force-app/main/default/objects/Change__c/fields/ContractuallyDealSpecialContract__c.field-meta.xml
<CustomField>
    <fullName>ContractuallyDealSpecialContract__c</fullName>
    <label>（不要）契約上取扱い特約</label>
    <type>TextArea</type>
</CustomField>