force-app/main/default/objects/Change__c/fields/CorporateHousingStaff__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入替 (取引先担当者)</relationshipLabel>
    <relationshipName>gg0t</relationshipName>
    <type>Lookup</type>
</CustomField>