force-app/main/default/objects/Change__c/fields/CorporateHousingStaffName__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingStaffName__c</fullName>
    <formula>CorporateHousingStaff__r.LastName &amp; &quot; &quot; &amp;  CorporateHousingStaff__r.FirstName</formula>
    <label>社宅担当者名</label>
    <type>Text</type>
</CustomField>