force-app/main/default/objects/Change__c/fields/CounterStaffName__c.field-meta.xml
<CustomField>
    <fullName>CounterStaffName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>窓口担当者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入替 (窓口担当者名)</relationshipLabel>
    <relationshipName>dKMv</relationshipName>
    <type>Lookup</type>
</CustomField>