force-app/main/default/objects/Change__c/fields/DataProcessor__c.field-meta.xml
<CustomField>
    <fullName>DataProcessor__c</fullName>
    <label>（不要）データ処理者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>