force-app/main/default/objects/Change__c/fields/DecisionAuthority__c.field-meta.xml
<CustomField>
    <fullName>DecisionAuthority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁権限</label>
    <referenceTo>DecisionAuthority__c</referenceTo>
    <relationshipLabel>入替</relationshipLabel>
    <relationshipName>ChangeoJba</relationshipName>
    <type>Lookup</type>
</CustomField>