force-app/main/default/objects/Change__c/fields/delIsLeaveWitness__c.field-meta.xml
<CustomField>
    <fullName>delIsLeaveWitness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>（不要）退去立会の有無</label>
    <type>Checkbox</type>
</CustomField>