force-app/main/default/objects/Change__c/fields/delIsRenovation__c.field-meta.xml
<CustomField>
    <fullName>delIsRenovation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リフォーム有無</label>
    <type>Checkbox</type>
</CustomField>