force-app/main/default/objects/Change__c/fields/DocumentArriveDateEnteredBy__c.field-meta.xml
<CustomField>
    <fullName>DocumentArriveDateEnteredBy__c</fullName>
    <label>書類着日入力者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>