force-app/main/default/objects/Change__c/fields/DueDateGraceTerm__c.field-meta.xml
<CustomField>
    <fullName>DueDateGraceTerm__c</fullName>
    <label>期日猶予期間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>