force-app/main/default/objects/Change__c/fields/EmployeeBurden__c.field-meta.xml
<CustomField>
    <fullName>EmployeeBurden__c</fullName>
    <label>社員負担有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresenceAbsence</valueSetName>
    </valueSet>
</CustomField>