force-app/main/default/objects/Change__c/fields/EmployeeGuidanceDate__c.field-meta.xml
<CustomField>
    <fullName>EmployeeGuidanceDate__c</fullName>
    <label>社員様連絡日</label>
    <type>Date</type>
</CustomField>