force-app/main/default/objects/Change__c/fields/EstimateReminderDate__c.field-meta.xml
<CustomField>
    <fullName>EstimateReminderDate__c</fullName>
    <label>見積り督促日</label>
    <type>Date</type>
</CustomField>