force-app/main/default/objects/Change__c/fields/FaxReceiptConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>FaxReceiptConfirmDate__c</fullName>
    <label>（不要）FAX受領確認日</label>
    <type>Date</type>
</CustomField>