force-app/main/default/objects/Change__c/fields/FaxReceiptConfirmer__c.field-meta.xml
<CustomField>
    <fullName>FaxReceiptConfirmer__c</fullName>
    <label>（不要）FAX受領確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>