force-app/main/default/objects/Change__c/fields/FinanceSubmitDate2__c.field-meta.xml
<CustomField>
    <fullName>FinanceSubmitDate2__c</fullName>
    <label>経理提出日２</label>
    <type>Date</type>
</CustomField>