force-app/main/default/objects/Change__c/fields/GuidanceDate__c.field-meta.xml
<CustomField>
    <fullName>GuidanceDate__c</fullName>
    <label>案内日</label>
    <type>Date</type>
</CustomField>