force-app/main/default/objects/Change__c/fields/GuidanceNecessaryDocument__c.field-meta.xml
<CustomField>
    <fullName>GuidanceNecessaryDocument__c</fullName>
    <label>案内必要書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>免許証コピー</fullName>
            </value>
            <value>
                <fullName>社員証コピー</fullName>
            </value>
            <value>
                <fullName>パスポートコピー</fullName>
            </value>
            <value>
                <fullName>住民票</fullName>
            </value>
            <value>
                <fullName>健康保険証コピー</fullName>
            </value>
            <value>
                <fullName>顔写真</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>