force-app/main/default/objects/Change__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <label>案内者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>