force-app/main/default/objects/Change__c/fields/IsAutoUpdataResidentLeave__c.field-meta.xml
<CustomField>
    <fullName>IsAutoUpdataResidentLeave__c</fullName>
    <formula>CompanyRule__r.IsAutoUpdataResidentLeave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動入居者変更フラグ（退去）</label>
    <type>Checkbox</type>
</CustomField>