force-app/main/default/objects/Change__c/fields/IsAutoUpdataResidentMove__c.field-meta.xml
<CustomField>
    <fullName>IsAutoUpdataResidentMove__c</fullName>
    <formula>CompanyRule__r.IsAutoUpdataResidentMove__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動入居者変更フラグ（入居）</label>
    <type>Checkbox</type>
</CustomField>