force-app/main/default/objects/Change__c/fields/IsChangeAutoNoticeUnavailable__c.field-meta.xml
<CustomField>
    <fullName>IsChangeAutoNoticeUnavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入替窓口自動通知不可</label>
    <type>Checkbox</type>
</CustomField>