force-app/main/default/objects/Change__c/fields/IsChangeRealEstate__c.field-meta.xml
<CustomField>
    <fullName>IsChangeRealEstate__c</fullName>
    <formula>RealEstate__r.IsChange__c</formula>
    <label>入替物件</label>
    <type>Checkbox</type>
</CustomField>