force-app/main/default/objects/Change__c/fields/IsDecisionApplication__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>決裁申請有り</label>
    <type>Checkbox</type>
</CustomField>