force-app/main/default/objects/Change__c/fields/IsEmployeeContactDate__c.field-meta.xml
<CustomField>
    <fullName>IsEmployeeContactDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>社員連絡日無し</label>
    <type>Checkbox</type>
</CustomField>