force-app/main/default/objects/Change__c/fields/IsLeaveCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveCompleted__c</fullName>
    <formula>NewResidentName__r.LastName + NewResidentName__r.FirstName</formula>
    <label>新入居者名</label>
    <type>Text</type>
</CustomField>