force-app/main/default/objects/Change__c/fields/IsLeaveWitness__c.field-meta.xml
<CustomField>
    <fullName>IsLeaveWitness__c</fullName>
    <label>退去立会の有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresenceAbsence</valueSetName>
    </valueSet>
</CustomField>