force-app/main/default/objects/Change__c/fields/IsManagementCompanyContactDate__c.field-meta.xml
<CustomField>
    <fullName>IsManagementCompanyContactDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理会社連絡日無し</label>
    <type>Checkbox</type>
</CustomField>