force-app/main/default/objects/Change__c/fields/IsRemoteAccessEnable__c.field-meta.xml
<CustomField>
    <fullName>IsRemoteAccessEnable__c</fullName>
    <formula>Account__r.IsRemoteAccessEnable__c</formula>
    <label>（不要）在宅非表示フラグ</label>
    <type>Checkbox</type>
</CustomField>