force-app/main/default/objects/Change__c/fields/IsRenovation__c.field-meta.xml
<CustomField>
    <fullName>IsRenovation__c</fullName>
    <label>リフォームの有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresenceAbsence</valueSetName>
    </valueSet>
</CustomField>