force-app/main/default/objects/Change__c/fields/IsSecondaryCheckDate__c.field-meta.xml
<CustomField>
    <fullName>IsSecondaryCheckDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2次チェック日無し</label>
    <type>Checkbox</type>
</CustomField>