force-app/main/default/objects/Change__c/fields/KeyExchangeCost__c.field-meta.xml
<CustomField>
    <fullName>KeyExchangeCost__c</fullName>
    <label>鍵交換費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>