force-app/main/default/objects/Change__c/fields/KeyExchangeCostTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>KeyExchangeCostTaxCategory__c</fullName>
    <label>鍵交換費用税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>