force-app/main/default/objects/Change__c/fields/KeyKeeperName__c.field-meta.xml
<CustomField>
    <fullName>KeyKeeperName__c</fullName>
    <label>鍵保管者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>