force-app/main/default/objects/Change__c/fields/KeyMemo__c.field-meta.xml
<CustomField>
    <fullName>KeyMemo__c</fullName>
    <label>鍵メモ</label>
    <type>TextArea</type>
</CustomField>