force-app/main/default/objects/Change__c/fields/KeyReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnAddress__c</fullName>
    <label>鍵の返却先</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>貸主</fullName>
            </value>
            <value>
                <fullName>管理会社</fullName>
            </value>
            <value>
                <fullName>仲介会社</fullName>
            </value>
            <value>
                <fullName>管理人</fullName>
            </value>
            <value>
                <fullName>修繕会社</fullName>
            </value>
            <value>
                <fullName>新入居者</fullName>
            </value>
            <value>
                <fullName>新勤務先</fullName>
            </value>
            <value>
                <fullName>現勤務先</fullName>
            </value>
            <value>
                <fullName>社宅担当者様</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>