force-app/main/default/objects/Change__c/fields/KeyReturnAddressNoLink__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnAddressNoLink__c</fullName>
    <label>鍵の返却先（リンク無し）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>