force-app/main/default/objects/Change__c/fields/KeyReturnMethod__c.field-meta.xml
<CustomField>
    <fullName>KeyReturnMethod__c</fullName>
    <label>鍵返却方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>管理会社窓口に返却</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>