force-app/main/default/objects/Change__c/fields/LeaveGuide__c.field-meta.xml
<CustomField>
    <fullName>LeaveGuide__c</fullName>
    <label>（不要）退去案内者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>