force-app/main/default/objects/Change__c/fields/LeaveRegistrationsellationReserveDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveRegistrationsellationReserveDate__c</fullName>
    <label>（不要）退去登録解除予約日</label>
    <type>Date</type>
</CustomField>