force-app/main/default/objects/Change__c/fields/LeaveScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveScheduledDate__c</fullName>
    <label>退去予定日</label>
    <type>Date</type>
</CustomField>