force-app/main/default/objects/Change__c/fields/LeftEmployee__c.field-meta.xml
<CustomField>
    <fullName>LeftEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>退去者</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CompanyStaff</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CompanyEmployee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入替 (退去者)</relationshipLabel>
    <relationshipName>ChangeContactRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>