force-app/main/default/objects/Change__c/fields/LeftEmployeeLastName__c.field-meta.xml
<CustomField>
    <fullName>LeftEmployeeLastName__c</fullName>
    <formula>LeftEmployee__r.LastName</formula>
    <label>退去者姓</label>
    <type>Text</type>
</CustomField>