force-app/main/default/objects/Change__c/fields/LeftEmployeeNameKana__c.field-meta.xml
<CustomField>
    <fullName>LeftEmployeeNameKana__c</fullName>
    <formula>LeftEmployee__r.Kana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退去者名カナ</label>
    <type>Text</type>
</CustomField>