force-app/main/default/objects/Change__c/fields/LeftEmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>LeftEmployeeNumber__c</fullName>
    <formula>LeftEmployee__r.EmployeeNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退去者社員番号</label>
    <type>Text</type>
</CustomField>