force-app/main/default/objects/Change__c/fields/ManagementCompanyId__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>管理会社ＩＤ</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ChangeAccountRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>