force-app/main/default/objects/Change__c/fields/MoveRegistrationReserveDate__c.field-meta.xml
<CustomField>
    <fullName>MoveRegistrationReserveDate__c</fullName>
    <label>（不要）入居予約登録日</label>
    <type>Date</type>
</CustomField>