force-app/main/default/objects/Change__c/fields/NewResidentName__c.field-meta.xml
<CustomField>
    <fullName>NewResidentName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新入居者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入替 (入居者)</relationshipLabel>
    <relationshipName>ChangeContactRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>