force-app/main/default/objects/Change__c/fields/OrderScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>OrderScheduledDate__c</fullName>
    <label>発注予定日</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>