force-app/main/default/objects/Change__c/fields/OtherBillingExpenseItems2__c.field-meta.xml
<CustomField>
    <fullName>OtherBillingExpenseItems2__c</fullName>
    <label>その他2請求費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>