force-app/main/default/objects/Change__c/fields/ProcedureCharge__c.field-meta.xml
<CustomField>
    <fullName>ProcedureCharge__c</fullName>
    <label>入居者変更手続き料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>