force-app/main/default/objects/Change__c/fields/ProxyContact__c.field-meta.xml
<CustomField>
    <fullName>ProxyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>その他連絡先（社員）</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CompanyStaff</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CompanyEmployee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>入替 (連絡窓口)</relationshipLabel>
    <relationshipName>INuV</relationshipName>
    <type>Lookup</type>
</CustomField>