force-app/main/default/objects/Change__c/fields/RealEstateId__c.field-meta.xml
<CustomField>
    <fullName>RealEstateId__c</fullName>
    <formula>RealEstate__r.RealEstateId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>物件ID</label>
    <type>Text</type>
</CustomField>