force-app/main/default/objects/Change__c/fields/RealEstateName__c.field-meta.xml
<CustomField>
    <fullName>RealEstateName__c</fullName>
    <formula>RealEstate__r.Name</formula>
    <label>物件名</label>
    <type>Text</type>
</CustomField>