force-app/main/default/objects/Change__c/fields/Reapplication1CorporateHousingDContact__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CorporateHousingDContact__c</fullName>
    <label>再申請①社宅D連絡日（申請前）</label>
    <type>Date</type>
</CustomField>