force-app/main/default/objects/Change__c/fields/Reapplication1DocumentCollectDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1DocumentCollectDate__c</fullName>
    <label>再申請①書類回収日</label>
    <type>Date</type>
</CustomField>