force-app/main/default/objects/Change__c/fields/Reapplication1InternalLinkHistory__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1InternalLinkHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再申請①社内連携履歴</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>入替</relationshipLabel>
    <relationshipName>Reapplication1Relation1</relationshipName>
    <type>Lookup</type>
</CustomField>