force-app/main/default/objects/Change__c/fields/Reapplication1ReReconfirmSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1ReReconfirmSubmitDate__c</fullName>
    <label>再申請①（再）再査提出日</label>
    <type>Date</type>
</CustomField>