force-app/main/default/objects/Change__c/fields/Reapplication2_CheckAccountingDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2_CheckAccountingDate__c</fullName>
    <label>再申請②経理手配2次チェック日</label>
    <type>Date</type>
</CustomField>