force-app/main/default/objects/Change__c/fields/Reapplication2CompanyacceptDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CompanyacceptDate__c</fullName>
    <label>再申請②企業了承日</label>
    <type>Date</type>
</CustomField>