force-app/main/default/objects/Change__c/fields/Reapplication2CorpHDContactContent__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorpHDContactContent__c</fullName>
    <label>再申請②社宅D連絡内容（申請前）</label>
    <type>TextArea</type>
</CustomField>