force-app/main/default/objects/Change__c/fields/Reapplication2FinanceContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2FinanceContactDate__c</fullName>
    <label>再申請②経理連絡日（申請前）</label>
    <type>Date</type>
</CustomField>