force-app/main/default/objects/Change__c/fields/Reapplication2FinanceCorrespondenceMemoA__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2FinanceCorrespondenceMemoA__c</fullName>
    <label>再申請②経理対応メモ（承認後）</label>
    <type>TextArea</type>
</CustomField>