force-app/main/default/objects/Change__c/fields/Reapplication2InternalLinkHistory__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2InternalLinkHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再申請②社内連携履歴</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>入替 (再申請②社内連携履歴)</relationshipLabel>
    <relationshipName>Reapplication1Relation2</relationshipName>
    <type>Lookup</type>
</CustomField>