force-app/main/default/objects/Change__c/fields/Reapplication2ReReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2ReReconfirmDate__c</fullName>
    <label>再申請②（再）再査日</label>
    <type>Date</type>
</CustomField>