force-app/main/default/objects/Change__c/fields/Reapplication3CorpHDContactContentAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3CorpHDContactContentAfter__c</fullName>
    <label>再申請③社宅D連絡内容（承認後）</label>
    <type>TextArea</type>
</CustomField>