force-app/main/default/objects/Change__c/fields/Reapplication3EmployeeContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3EmployeeContactDate__c</fullName>
    <label>再申請③社員連絡日</label>
    <type>Date</type>
</CustomField>