force-app/main/default/objects/Change__c/fields/ReceiptConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiptConfirmDate__c</fullName>
    <label>受領確認日</label>
    <type>Date</type>
</CustomField>