force-app/main/default/objects/Change__c/fields/RecipientTransferFee2_del__c.field-meta.xml
<CustomField>
    <fullName>RecipientTransferFee2_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金先2_振込手数料先方負担</label>
    <type>Checkbox</type>
</CustomField>