force-app/main/default/objects/Change__c/fields/ReconfirmRequestStaff__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmRequestStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CH3MVR</relationshipName>
    <type>Lookup</type>
</CustomField>