force-app/main/default/objects/Change__c/fields/ReconfirmRequestTeam__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmRequestTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再査担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>入替 (再査担当チーム)</relationshipLabel>
    <relationshipName>CHgWuj</relationshipName>
    <type>Lookup</type>
</CustomField>