force-app/main/default/objects/Change__c/fields/RelatedChange__c.field-meta.xml
<CustomField>
    <fullName>RelatedChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連入替</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RealEstate__c</field>
            <operation>equals</operation>
            <valueField>Change__c.RealEstate__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Change__c</referenceTo>
    <relationshipLabel>関連入替</relationshipLabel>
    <relationshipName>ChangetQLj</relationshipName>
    <type>Lookup</type>
</CustomField>