force-app/main/default/objects/Change__c/fields/RelatedChangeId__c.field-meta.xml
<CustomField>
    <fullName>RelatedChangeId__c</fullName>
    <formula>IF ( RelatedChange__r.FormulaRecordType__c =&quot;Leave&quot; , RelatedChange__r.LeftEmployee__r.LastName + RelatedChange__r.LeftEmployee__r.FirstName,  RelatedChange__r.NewResidentName__r.LastName +  RelatedChange__r.NewResidentName__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>関連入替者</label>
    <type>Text</type>
</CustomField>