force-app/main/default/objects/Change__c/fields/RemittanceAmount3__c.field-meta.xml
<CustomField>
    <fullName>RemittanceAmount3__c</fullName>
    <label>送金先3_送金額(税抜)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>